# examples

./: Cargo.toml  README.md
rust/: Cargo.toml
rust/basic/: Cargo.toml
rust/basic/examples/: combinator.rs  convert.rs  pointer.rs  result_option.rs  review_transfor.rs  slice.rs  str.rs  trait_extern_method.rs
rust/enum_option_result/examples/: option.rs
rust/enum_option_result/src/: main.rs
rust/example_thread/: Cargo.toml
rust/example_thread/src/: main.rs
rust/faas/: Cargo.toml  README.md
rust/faas/docs/: book.toml  overview.md
rust/faas/src/: error.rs  lib.rs  main.rs
rust/ffi/: Cargo.toml  README.md  build.rs
rust/ffi/bck/: lib.c  lib.h
rust/ffi/callback/: build.rs
rust/ffi/callback/bck/: libgo.c  libgo.h
rust/ffi/callback/shared/: c_protocols.h  run.sh
rust/ffi/callback/src/: lib.rs  shared.c
rust/ffi/rust_2_c/: Cargo.toml
rust/ffi/rust_2_c/src/: lib.rs
rust/ffi/shared/: all_in_one.go  go.mod  go.sum  libgo.h  main.go  run.sh  shared.h
rust/ffi/shared/common/: shared.c  shared.h
rust/ffi/shared/go_demo/: all_in_one.go  main.go
rust/ffi/shared/go_plugin_example/: main.go
rust/ffi/shared/go_with_type/: main.go
rust/ffi/shared/protocols/: c_protocols.c
rust/ffi/src/: c_protocols.rs  ffi.rs  lib.rs  main.rs  shared.h
rust/ffi/use_c_struct_in_rust/: Cargo.toml
rust/ffi/use_rust_struct_in_c/: Cargo.toml  build.rs  run.sh  shared.h
rust/ffi/use_rust_struct_in_c/examples/: call_rust.c  rust.rs
rust/ffi/use_rust_struct_in_c/src/: lib.rs  main.rs  shared.c  shared.h
rust/geek_rust_zhanghandong/example/src/: main.rs
rust/my_function_project/: Cargo.toml  README.md
rust/my_function_project/capi/include/: plugin.h
rust/my_function_project/core/plugin/: Cargo.toml
rust/my_function_project/docs/: overview.md
rust/my_function_project/plugins/: Cargo.toml
rust/my_function_project/plugins/shared/: protocol.rs  protocols.c
rust/my_function_project/plugins/src/: errors.rs  lib.rs  plugin.rs  protocol.rs
rust/paho-matt/: Cargo.toml
rust/paho-matt/src/: main.rs
rust/project_structure/: Cargo.toml
rust/project_structure_sublib/: Cargo.toml
rust/rust_2_c/: run.sh  shared.h
rust/rust_2_c/src/: lib.rs
rust/rust_async/: Cargo.toml
rust/rust_async/docs/: Readme.md
rust/rust_async/examples/: async_future.rs  basic.rs  example.rs  fat_pointer.rs  future.rs  future_generator.rs  future_runtime.rs  future_step1.rs  generator.rs  pin.rs  stream.rs  thread.rs  time.rs  vtable.rs
rust/rust_async/src/: main.rs
rust/thiserror_example/: Cargo.toml
rust/thiserror_example/examples/: this_err.rs
rust/trait_object/src/: dyn_trait.rs  function_call_dyn_trait.rs  lib.rs  main.rs  sizeof.rs  super_trait.rs  trait_object.rs
rust_async/: Cargo.toml
rust_async/examples/: add.rs  sink.rs
rust_async/src/: main.rs
topic/opentelemetry/helloworld_rust/: Cargo.toml  build.rs
topic/opentelemetry/helloworld_rust/docs/: README.md  issue.md
topic/opentelemetry/helloworld_rust/examples/: client.rs  ext_dyn.rs  ext_impl.rs  split.rs  trace_log.rs
topic/opentelemetry/helloworld_rust/src/: greeter.rs  grpc_meter.rs  grpc_trace.rs  helloworld.rs  (+2 more)
(+228 files in other folders)
