[workspace]
members = [
    "example_thread",
    "project_structure",
    "project_structure_sublib",
    "rust_async",
    "enum_option_result",       # Option和Result, 组合子
    "polymorphic",              # 多台
    "trait_object",
    "basic",
    "thiserror_example",
    "ffi/callback",
    "ffi/rust_2_c",
    "ffi/use_rust_struct_in_c",
]

# project_structure_sublib/greetings
