[package]
name = "rust_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
futures = "0.3.17"
paho-mqtt = "0.9.1"
thiserror = "1.0.29"
tokio = { version = "1.12.0", features = ["full"] }
tokio-stream = "0.1.7"
