[package]
name = "mqtt_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.9.1"

[dependencies.plugin]
path = "../../../core/plugin"

[lib]
name = "mqtt_rust"
crate-type = ["cdylib"]
